# youtube-downloader

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: FormatToggle.tsx  Header.tsx  PlaylistView.tsx  ProgressBar.tsx  SingleDownload.tsx  TabSwitcher.tsx  VideoPreview.tsx
src/hooks/: useDownload.ts  usePlaylist.ts
src/lib/: types.ts
