[package]
name = "youtube-downloader"
version = "1.0.0"
edition = "2021"

[lib]
name = "youtube_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "youtube-downloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex-lite = "0.1"
